Refine auth UI, fix spacing, and update dashboard layout

--- a/static/css/accounts/user_authentication.css
+++ b/static/css/accounts/user_authentication.css
@@ -32,6 +32,10 @@ body{
 
     margin: 0 auto;
 }
+
+#user-authentication .btn{
+    border-radius: 0%;
+}
 /* =============== common code ends here =============== */
 
 
